<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_detail"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GithubUserDetailActivity">

    <RelativeLayout
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@drawable/grad">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_border">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:padding="3dp"
                android:scaleType="centerInside"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="9dp"
                android:src="@android:color/darker_gray"
                android:scaleType="centerCrop" />
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/detail_username"
            android:textColor="@color/white"
            android:textSize="32sp" />
        <LinearLayout
            android:id="@+id/repository"
            android:gravity="center"
            android:layout_below="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_repository"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/location"
            android:gravity="center"
            android:layout_below="@+id/repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_location"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/company"
            android:gravity="center"
            android:layout_below="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@color/white"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_company"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/total_followerd_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_below="@+id/company">
            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginEnd="8dp"
                android:text="@string/number_followers"
                android:textSize="24sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/followers"
                android:layout_marginEnd="24dp"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginEnd="8dp"
                android:text="@string/number_following"
                android:textSize="24sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/following"
                android:textSize="24sp" />
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_background"
        android:background="@drawable/grad"
        app:layout_anchor="@+id/img_background"
        app:layout_anchorGravity="bottom|center"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/view_pager"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>